[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/piranha.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/cano.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Entities/Piranha Pipe.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 11 )

[node name="Piranha Pipe" type="StaticBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 524288
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Piranha" type="Area2D" parent="."]
position = Vector2( 0, -108 )
collision_layer = 0

[node name="Sprite" type="Sprite" parent="Piranha"]
z_index = -3
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piranha"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="Piranha" to="." method="_on_Piranha_body_entered"]
[connection signal="body_exited" from="Piranha" to="." method="_on_Piranha_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
